<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.2</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>net.wuxianjie</groupId>
  <artifactId>backend</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
    <java.version>17</java.version>

    <jasypt.version>3.0.5</jasypt.version>
  </properties>


  <dependencies>
    <!-- Jasypt 项目配置文件加密库，此外还需添加 Jasypt Maven 插件 -->
    <dependency>
      <groupId>com.github.ulisesbocchio</groupId>
      <artifactId>jasypt-spring-boot-starter</artifactId>
      <version>${jasypt.version}</version>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- web 项目基础依赖 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- 主要使用 WebClient 工具类 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
    </dependency>

    <!-- 参数校验 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- Spring AOP -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-aop</artifactId>
    </dependency>

    <!-- 提供对自定义的配置项的 JavaDOC 支持 -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- MyBatis -->
    <dependency>
      <groupId>org.mybatis.spring.boot</groupId>
      <artifactId>mybatis-spring-boot-starter</artifactId>
      <version>3.0.2</version>
    </dependency>

    <!-- MySQL JDBC 驱动 -->
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
    </dependency>

    <!-- Redis -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-redis</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>

      <!-- Jasypt Maven 插件（还需要在项目中添加 Jasypt Compile 依赖）：
      1. 加密字符串：`mvn jasypt:encrypt-value -Djasypt.encryptor.password=wxj#secret_ -Djasypt.plugin.value=pass123`

      2. 解密字符串：`mvn jasypt:decrypt-value -Djasypt.encryptor.password=wxj#secret_ -Djasypt.plugin.value=KOTlCZ7eoNB0p1NfdIyj/c+k5cA3KgVm5e+Wee0EuU4LaI6WfGOau9PCwCqJxZ0I`

      3. 加密 Spring Boot 配置文件中属性值（`DEC(raw)` -> `ENC(encrypted)`）：`mvn jasypt:encrypt -Djasypt.encryptor.password=wxj#secret_`

      3.1 使用新密钥重新加密 Spring Boot 配置文件：`mvn jasypt:reencrypt -Djasypt.plugin.old.password=wxj#secret_ -Djasypt.encryptor.password=new-wxj#secret_`

      3.2 解密并打印 Spring Boot 配置文件内容：`mvn jasypt:decrypt -Djasypt.encryptor.password=wxj#secret_`

      4. 提供密钥以运行 Spring Boot 应用程序：`java -Djasypt.encryptor.password=wxj#secret_ -jar web.jar` -->
      <plugin>
        <groupId>com.github.ulisesbocchio</groupId>
        <artifactId>jasypt-maven-plugin</artifactId>
        <version>${jasypt.version}</version>
        <configuration>
          <!-- 默认为 `src/main/resources/application.properties` -->
          <path>file:src/main/resources/application.yml</path>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
